--- a/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div 
-        class="col-md-3 mb-5 animate__animated animate__fadeIn"
+        class="col-md-3 mb-5 animate__animated animate__fadeIn puntero"
         *ngFor="let pelicula of peliculas">
         <img [src]="pelicula.poster_path | poster" 
             class="img-fluid poster"
